Froze bootstrap version : bootstrap@4.0.0-beta - prevent compile errors & created an npm shrinkwrap file

--- a/source/styles/_layout.scss
+++ b/source/styles/_layout.scss
@@ -51,8 +51,12 @@ html {
 
   
   .breadcrumb-wrapper {
-    padding: 0 $vdm-side-menu-icon-size * 2 ;
-    margin: 0 auto;
+   // padding: 0 $vdm-side-menu-icon-size * 2 ;
+   .vdm-breadcrumb {
+    @include make-col-ready();
+    @include make-col(12);
+   }
+
   }
 
   // All regions in page templates should have at least a "region" class
